# -VANET-Guardian-Secure-Vehicle-Communication-Simulator-

./: CMakeLists.txt  README.md  app.py  main.py  project_presentation.md  requirements.txt  run_interface.py  run_simulation.bat  run_simulation.sh  vanet_simulation.py
analysis/: analyze_results.py
results/: comparison_report.json  simulation_report.txt
scenarios/: urban-scenario.cc
src/: __init__.py
src/crypto/: __init__.py  crypto-module.cpp  crypto-module.h  crypto_module.py
src/interface/: __init__.py  app.py
src/routing/: __init__.py  secure-routing.cpp  secure-routing.h  secure_routing.py
src/simulation/: __init__.py  comparative_analysis.py  test_comparative.py  vanet_sim.py
tests/: main.cpp
